product detail screen

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-paper": "^4.11.2",
     "react-native-popable": "^0.4.3",
     "react-native-rate": "^1.2.9",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "^3.3.2",
