--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-in-app-review": "^3.3.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^4.11.2",
     "react-native-popable": "^0.4.3",
     "react-native-rate": "^1.2.9",
