--- a/ios/otrixcommerce/Info.plist
+++ b/ios/otrixcommerce/Info.plist
@@ -48,7 +48,6 @@
 			</dict>
 		</dict>
 	</dict>
-	
 	<key>NSCameraUsageDescription</key>
 	<string>CloudshopBD needs camera access</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
@@ -80,6 +79,11 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
