--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^4.11.2",
+    "react-native-permissions": "^3.10.1",
     "react-native-popable": "^0.4.3",
     "react-native-rate": "^1.2.9",
     "react-native-raw-bottom-sheet": "^2.2.0",
